--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8_Y2.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8_Y2.jrxml
@@ -8,15 +8,14 @@
 	<parameter name="facFullname" class="java.lang.String"/>
 	<parameter name="auJobResp" class="java.lang.String"/>
 	<parameter name="paperBaNumber" class="java.lang.String"/>
-	<parameter name="startDate" class="java.util.Date"/>
-	<parameter name="endDate" class="java.util.Date"/>
+	<parameter name="startDate" class="java.lang.String"/>
+	<parameter name="endDate" class="java.lang.String"/>
 	<parameter name="yearIncType" class="java.lang.String"/>
 	<parameter name="yearNum" class="java.lang.String"/>
 	<parameter name="commentText8" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="no" class="java.lang.String"/>
 	<field name="taxMonth" class="java.lang.String"/>
 	<field name="incomeCurrentYearAmt" class="java.lang.String"/>
 	<field name="incomeLastYear1Amt" class="java.lang.String"/>
@@ -194,7 +193,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{startDate})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{startDate}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="225" y="69" width="15" height="22" uuid="535fd204-51ef-4766-bfa3-f3970dcb0e2e"/>
@@ -221,7 +220,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{endDate})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{endDate}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="366" y="69" width="154" height="22" uuid="7779e99f-2040-47ef-8871-9d1d618e9d9b"/>
@@ -235,14 +234,14 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["TAX".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="530" y="69" width="20" height="22" uuid="134f8be8-b991-4445-8ea3-2331f63a6b5a"/>
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["2".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["NET".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="550" y="69" width="130" height="22" uuid="3f16f86a-53d2-46d8-926e-d5f04271d1dc"/>
@@ -391,14 +390,14 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{no}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}.intValue()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="200" y="0" width="100" height="22" uuid="b336dcae-4b87-4c69-a860-5549e94a6872"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{incomeLastYear1Amt}]]></textFieldExpression>
@@ -408,67 +407,67 @@
 				<box leftPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{taxMonth}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="100" y="0" width="100" height="22" uuid="a5c3f59b-5de3-449b-8a33-88366a2e2cdf"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{incomeCurrentYearAmt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="300" y="0" width="100" height="22" uuid="d1779d19-532b-4962-a6fd-75c349e7d5e9"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{diffIncomeLastYear1Amt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="400" y="0" width="100" height="22" uuid="4886ede7-332f-4788-8a48-37678b88a012"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{diffIncomeLastYear1Pnt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="600" y="0" width="100" height="22" uuid="d4481926-ce4e-435f-841b-1e106d23acec"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{diffIncomeLastYear2Amt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="500" y="0" width="100" height="22" uuid="c4f382b3-d21b-4644-a89c-db9c1f404eee"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{incomeLastYear2Amt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="700" y="0" width="100" height="22" uuid="fda94c0b-261c-4c02-8db7-2a3991a22850"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{diffIncomeLastYear2Pnt}]]></textFieldExpression>
