--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/IA_FORM_6006_NO.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/IA_FORM_6006_NO.jrxml
@@ -5,6 +5,27 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<style name="Topic" hTextAlign="Center" vTextAlign="Middle" fontName="TH Sarabun New" fontSize="16" isBold="true"/>
 	<style name="TextDetail" hTextAlign="Left" pattern="" fontName="TH Sarabun New" fontSize="14"/>
+	<style name="TextDetailBold" pattern="" fontName="TH Sarabun New" fontSize="14" isBold="true"/>
+	<style name="Checkbox" fontName="DejaVu Sans"/>
+	<parameter name="name" class="java.lang.String"/>
+	<parameter name="position" class="java.lang.String"/>
+	<parameter name="paymentCost" class="java.lang.String"/>
+	<parameter name="affiliation" class="java.lang.String"/>
+	<parameter name="paymentFor" class="java.lang.String"/>
+	<parameter name="period" class="java.lang.String"/>
+	<parameter name="refReceipts" class="java.lang.String"/>
+	<parameter name="billAmount" class="java.lang.String"/>
+	<parameter name="salary" class="java.lang.String"/>
+	<parameter name="requestNo" class="java.lang.String"/>
+	<parameter name="notOver" class="java.lang.String"/>
+	<parameter name="periodWithdraw" class="java.lang.String"/>
+	<parameter name="totalMonth" class="java.lang.String"/>
+	<parameter name="totalWithdraw" class="java.lang.String"/>
+	<parameter name="receipts" class="java.lang.String"/>
+	<parameter name="status" class="java.lang.String"/>
+	<parameter name="periodWithdrawTo" class="java.lang.String"/>
+	<parameter name="iaDisReqId" class="java.lang.String"/>
+	<parameter name="form6005No" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -15,16 +36,116 @@
 		<band height="60" splitType="Stretch">
 			<textField>
 				<reportElement style="Topic" x="160" y="10" width="190" height="30" uuid="dd744a44-d600-4fe5-bc36-df9f394bdd75"/>
-				<textFieldExpression><![CDATA["แบบขอเบิกเงินค่าเช่าบ้าน (๖๐๐๖)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["แบบขอเบิกเงินค่าเช่าบ้าน (แบบ ๖๐๐๖)"]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="316" splitType="Prevent">
+		<band height="550" splitType="Prevent">
 			<textField>
 				<reportElement style="TextDetail" x="20" y="0" width="143" height="30" uuid="d7effebc-8dcf-4a25-a4d5-d36731d79586"/>
 				<textFieldExpression><![CDATA["๑. การขอเบิกและการรับรอง"]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="0" y="30" width="100" height="30" uuid="6eaa90f8-6230-4657-982c-60448d64a4e7"/>
+				<textFieldExpression><![CDATA["ข้าพเจ้า"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="300" y="30" width="100" height="30" uuid="cea65117-d44b-40a2-810e-438a4ada3078"/>
+				<textFieldExpression><![CDATA["ตำแหน่ง"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="0" y="60" width="100" height="30" uuid="452fc4c4-80d0-412b-9f14-54609681cf0b"/>
+				<textFieldExpression><![CDATA["สังกัด"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="20" y="80" width="180" height="20" uuid="683151cd-6dff-4d16-9655-7a98b1a5035f"/>
+				<textFieldExpression><![CDATA["๑. ขอยื่นเบิกเป็นค่าเช่าบ้าน ดังนี้"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="40" y="100" width="100" height="30" uuid="63002d63-b110-4eec-9916-b1a8dab669f1"/>
+				<textFieldExpression><![CDATA["๑.๑ ข้าพเจ้าได้จ่ายเงิน	"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" style="Checkbox" x="150" y="110" width="30" height="30" uuid="5aca2cfe-4d8a-4f55-9231-0b75c752c1eb"/>
+				<textFieldExpression><![CDATA["1".equals($P{paymentCost})?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="170" y="100" width="100" height="30" uuid="d019ce4b-1f39-4c6f-80f4-f1f5a9c9c5d5"/>
+				<textFieldExpression><![CDATA["ค่าเช่าบ้าน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="300" y="100" width="100" height="30" uuid="06afc66b-7b10-4208-a0f9-cb2a2ba54cc0"/>
+				<textFieldExpression><![CDATA["ค่าเช่าซื้อ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="430" y="100" width="100" height="30" uuid="abe2555d-3516-49bb-ad6e-8f05d8b77f9e"/>
+				<textFieldExpression><![CDATA["ค่าผ่อนชำระเงินกู้"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" style="Checkbox" x="280" y="110" width="30" height="30" uuid="e133a504-7509-4276-b1bd-3224462124de"/>
+				<textFieldExpression><![CDATA["2".equals($P{paymentCost} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" style="Checkbox" x="410" y="110" width="30" height="30" uuid="4ee3f72e-2aa7-4171-a1fc-855166d811a4"/>
+				<textFieldExpression><![CDATA["3".equals($P{paymentCost} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="0" y="120" width="100" height="30" uuid="b5c98f9a-34bb-4dc4-8c0e-516ec045c370"/>
+				<textFieldExpression><![CDATA["ได้แก่"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="280" y="130" width="100" height="30" uuid="f84bfa49-18f0-4ad6-81ab-db033ca71dce"/>
+				<textFieldExpression><![CDATA["ประจำเดือน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="0" y="150" width="80" height="30" uuid="ff884129-7514-499a-8eb5-57ad906f2851"/>
+				<textFieldExpression><![CDATA["ตามใบเสร็จรับเงิน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="140" y="150" width="30" height="30" uuid="cf0af2dc-013a-428a-b658-4bb9446187c1"/>
+				<textFieldExpression><![CDATA["ฉบับ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="192" y="150" width="50" height="30" uuid="7de302eb-9c92-40c6-b198-7a14eb95288a"/>
+				<textFieldExpression><![CDATA["เป็นจำนวน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetailBold" x="280" y="150" width="30" height="30" uuid="38523061-17b5-439f-807a-22ad7a729ac3"/>
+				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="41" y="170" width="100" height="30" uuid="15bd5bdf-1ec4-4b5e-9540-fa1a49af366b"/>
+				<textFieldExpression><![CDATA["๑.๒ ข้าพเจ้าได้รับเงิน	เดือนละ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetailBold" x="200" y="170" width="30" height="30" uuid="dad853af-4670-4442-a1c2-5b32cd729e43"/>
+				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="100" y="30" width="143" height="30" uuid="27c510b0-eded-4988-81e0-1ff55eb8f54a"/>
+				<textFieldExpression><![CDATA[$P{name}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="400" y="30" width="143" height="30" uuid="5e3109f1-6139-4951-8d46-4994af54c247"/>
+				<textFieldExpression><![CDATA[$P{position}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="71" y="45" width="189" height="1" uuid="4eca4f31-4b32-45df-b473-e3b888c6680c"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<textField>
+				<reportElement style="TextDetail" x="99" y="60" width="143" height="30" uuid="12e53602-45d8-4be1-b272-35ade5b5410c"/>
+				<textFieldExpression><![CDATA[$P{affiliation}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="71" y="75" width="189" height="1" uuid="b6f442f6-c264-45a2-9510-7fde066680fc"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
 		</band>
 	</pageHeader>
 </jasperReport>
